@@ -47,7 +47,7 @@ sub Populate {
     }
 
     $cw->add_annotation($hash) -> pack(@fx);
-    $cw->add_warning($hash)->pack(@fx) ;
+    $cw->add_warning($hash,'view')->pack(@fx) ;
     $cw->add_summary($hash)    -> pack(@fx) ;
     $cw->add_description($hash)-> pack(@fx) ;
 
